--- a/index.html
+++ b/index.html
@@ -53,18 +53,6 @@
             <div class="separador"></div>
         </div>
     </div>
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-10">
-                <!--Publicidad-->
-                <br>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-    </div>
     <br>
     <br>
     <div class="container" style="margin: 0%;">
@@ -157,6 +145,39 @@
                                 <br>
                                 <br>
                                 <button class="button"><a href="cyberbullying.html"> Ver mas ...</a></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container" style="margin: 0%;">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="art">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <!--Imagen-->
+                                <img src="https://images.unsplash.com/photo-1484175974775-f5df932b17eb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" style="height: auto; width: 100%; border-radius: 5px;" alt="">
+                            </div>
+                            <div class="col-md-8">
+                                <!--Texto-->
+                                <h2 class="art-title">
+                                    Sexting
+                                </h2>
+                                <br>
+                                <br>
+                                <p>
+                                    Encontrarás: .
+                                </p>
+                                <br>
+                                <br>
+                                <button class="button"><a href="sexting.html"> Ver mas ...</a></button>
                             </div>
                         </div>
                     </div>
