--- a/sexting.html
+++ b/sexting.html
@@ -42,9 +42,9 @@
     </nav>
     
     <div class="container" style="width: 100%; max-width: none !important;">
-        <div class="row" id="prinback-a">
+        <div class="row" id="prinback-b">
             <div class="col-md-10">
-                <h1 class="titulo">Grooming</h1>
+                <h1 class="titulo">Sexting</h1>
                 <span class="container-nombre">
                     <span class="circulo"></span>Por:  Barbé, Alan
                 </span>
@@ -55,39 +55,37 @@
         </div>
     </div>
 
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-10">
-                <!--Publicidad-->
-                <br>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-    </div>
     <div class="container" style="margin: 0%;">
         <div class="row">
             <div class="col-lg-12">
                 <p>
-                    <b class="text-title">¿Qué es el grooming?</b>
-                  <br>  El GROOMING es la acción deliberada de un adulto, varón o mujer, de acosar sexualmente a una niña, niño o adolescente a través de un medio digital que permita la interacción entre dos o más personas, como por ejemplo redes sociales, correo electrónico, mensajes de texto, sitios de chat o juegos en línea.
-                <br><br><b class="text-title">Proceso</b><br>
-                El Grooming es un proceso que puede durar semanas o meses, varía el tiempo según la víctima y suele pasar por las siguientes fases, de manera más o menos rápida según diversas circunstancias:
-<br><br>
-                <b class="text-list-point">1.</b> El adulto procede a elaborar lazos emocionales (de amistad) con el menor. En algunos casos, a través de internet pueden simular ser otro niño o niña.
-               <br> <b class="text-list-point">2.</b> El adulto va obteniendo datos personales y de contacto del menor.
-                <br> <b class="text-list-point">3.</b> Utilizando tácticas como la seducción, la provocación, el envío de imágenes de contenido pornográfico, consigue finalmente que el menor se desnude o realice actos de naturaleza sexual.
-               <br>  <b class="text-list-point">4.</b> Entonces se inicia el acoso, chantajeando a la víctima para obtener cada vez más material pornográfico o tener un encuentro físico con el menor para abusar sexualmente de él.
-                
-                <br><br><b class="text-title">En Argentina</b><br>
-                    En Argentina el grooming es un delito penado por la ley, que puede ser la antesala a otros delitos, como por ejemplo:
-                <br>  <b class="text-list-point">•</b> Obtener material de abuso o explotación sexual contra las infancias.
-                 <br>  <b class="text-list-point">•</b> Generar encuentros personales con las niñas, niños o adolescentes con intenciones de cometer un abuso sexual físico.
-                    <br> <b class="text-list-point">•</b> Comercialización en redes de explotación sexual contra las infancias y adolescencias
-                    <br> <br>
-                    Además, el grooming puede llegar a generar en las niñas, niños y adolescentes consecuencias psicológicas y físicas, derivadas de la manipulación por parte del adulto.
-                 </p>
+                    <b class="text-title">¿Qué es el sexting?</b>
+                    <br>  El Sexting es un término que se refiere al envío de mensajes sexuales, eróticos o pornográficos, por medio de teléfonos móviles. Inicialmente hacía referencia únicamente al envío de SMS de naturaleza sexual, pero después comenzó a aludir también al envío de material pornográfico a través de móviles y ordenadores.
+                    <br><br><b class="text-title">Características</b><br>
+                    El sexting puede ir también unido a otras acciones que también se consideran delitos en el mundo físico como el exhibicionismo o la extorsión. <br>
+                    Todo lo que se envíe por internet (#WhatsApp, #Instagram, email) puede ser utilizado en contra del usuario, y sobre todo que si se trata de contenido sexual. <br> El problema del Sexting es que se pierde el control de lo que se envía una vez sale de los teléfonos o portátiles. <br>
+                    Difundir videos o fotos eróticas o sexuales de otra persona es ilegal, y en diferentes países se trata de un delito grave cuando la persona que difunde este contenido es pareja, la víctima sea menor de edad o los hechos se hubieran cometido con una finalidad lucrativa. <br>
+                    Lo importante es conocer que cuando falta el consentimiento, el sexting pasa a ciberacoso sexual y se puede llevar a cabo de muchas maneras: <br>
+                    <ul>
+                        <li>Mediante el envío de mensajes con un lenguaje amenazante</li>
+                        <li>A través de la publicación de fotos, videos, o rumores para deshonrar la reputación de la víctima online</li>
+                        <li>Mediante el envío de imágenes o vídeos o comentarios a personas del entorno de la víctima denigrándola</li>
+                        <li>A través del ciberacoso repetido destinado a producir miedo</li>
+                    </ul>
+                    <br><br><b class="text-title">Consejos por precaución</b><br>
+                    <ol>
+                        <li>No accedas a chantajes.</li>
+                        <li>Evitá contactar con desconocidos.</li>
+                        <li>Denunciá el Sexting.</li>
+                        <li>No compartas información o fotografías comprometedoras.</li>
+                        <li>Si te piden, nunca envíes ni te saces fotografías que pudieran afectar tu reputación.</li>
+                        <li>Deberás saber que tus fotografías pueden ser interceptadas por terceros.</li>
+                        <li>¿Quiénes exactamente reciben tus fotografías?</li>
+                        <li>Si enviaste una imagen, no lo vuelvas a hacer, será una cadena que jamás terminará.</li>
+                        <li>Bloqueá tus fotografías de las Redes Sociales, tal vez algunas sean comprometedoras y podrían afectar tu reputación en un futuro cercano.</li>
+                        <li>Si sabés de alguien que está enviando o recibiendo fotografías, explícales el peligro, así estarás evitando que se propague esta práctica.</li>
+                    </ol>
+                </p>
         </div>
     </div>
     <div class="container">
