--- a/tips.html
+++ b/tips.html
@@ -45,7 +45,7 @@
                 <h1 class="titulo">Redes sociales</h1>
                 <h2 class="subtitulo">Formas de proteger tu privacidad </h2>
                 <span class="container-nombre">
-                    <span class="circulo"></span>Por: Tomas Di Mauro
+                    <span class="circulo"></span>Por: Alan Barbé
                 </span>
             </div>
         </div>
