--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   <h2 class="art-title">Sexting</h2>
                   <br />
                   <br />
-                  <p>Encontrarás: .</p>
+                  <p>Encontrarás: Definición, Características, y consejos</p>
                   <br />
                   <br />
                   <button class="button">
