--- a/tips.html
+++ b/tips.html
@@ -45,12 +45,24 @@
                 <h1 class="titulo">Redes sociales</h1>
                 <h2 class="subtitulo">Formas de proteger tu privacidad </h2>
                 <span class="container-nombre">
-                    <span class="circulo"></span>Por: Alan Barbé
+                    <span class="circulo"></span>Por: Tomas Di Mauro
                 </span>
             </div>
         </div>
         <div class="row">
             <div class="separador"></div>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-10">
+                <!--Publicidad-->
+                <br>
+            </div>
+            <div class="col-md-2"></div>
         </div>
     </div>
     <div class="container" style="margin: 0%;">
@@ -72,7 +84,9 @@
                     <b class="text-list-point">•</b> Evita utilizar computadoras públicas para ingresar en redes sociales. Recuerda cerrar sesión, sobre todo cuando utilices una computadora que compartas con otras personas. <br>
                     <b class="text-list-point">•</b> Piensa dos veces antes de hacer clic o descargar cualquier contenido, recuerda que puede ser algún señuelo de Ingeniería social <br>
                     Podés probar la seguridad de una contraseña <a href="https://password.kaspersky.com/es/" target="_blank"> acá</a>  <br> <br> <br>
+
                     <b class="text-title">3. Utiliza autenticación en 2 pasos.</b> <br> <br> Mas información: <a href="https://www.facebook.com/help/instagram/566810106808145?helpref=related" target="_blank"> acá</a>  <br>
+
                     <br><br>
                     <b class="text-title">3. Haz uso de las herramientas de privacidad.</b> <br> <br> Todas las redes sociales disponen de un apartado donde puedes configurar diferentes opciones de seguridad y privacidad. Podrás elegir quién puede ver tus publicaciones, la información que muestras en tu perfil y muchos otros aspectos. Si te preocupa la seguridad en redes, estas herramientas son tu mejor aliado. <br>
                     <br><br>
@@ -88,7 +102,27 @@
                     Las herramientas de antispam y firewall también permiten optimizar la seguridad del sistema ante estos riesgos. También es fundamental no utilizar un usuario con permisos de administrador al momento de navegar por estas redes, y que cada persona que use el equipo tenga sus propios perfiles. Esta es una forma de minimizar el impacto en caso que ocurra un incidente. <br>
                     Finalmente, para monitorear y supervisar el uso por parte de los menores de edad, existen herramientas de control parental que permiten bloquear sitios web indeseados, así como también restringir ciertas franjas horarias (como cuando el niño está en la escuela, por ejemplo) o, de plano, la cantidad de tiempo en que el niño utiliza las redes sociales. <br>
                 </p>
+                
+                
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <!--Publicidad-->
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <!--
+                    footer
+                -->
+            </div>
+        </div>
+    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/t-x73w1N1os" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>  
 </body>
 </html>
